# nl2sql

./: .cruft.json  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
src/nl2sql/: __init__.py  cli.py  dbagent.py  typer_shell.py
tests/: __init__.py  test_cli.py  test_import.py
